# MakeWindowsIcons

./: .gitignore  README.md  pyproject.toml
makewindowsicons/: __main__.py  args.py  util.py
