[tool.poetry]
name = "makewindowsicons"
version = "0.1.16"
description = "Easily create all appropriate icon sizes for a Windows app from a single source image"
authors = ["DJ Stomp"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/djstompzone/MakeWindowsIcons"


[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.4.0"
argparse = "^1.4.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.3"
twine = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
